# django-shopping-cart

./: LICENSE  README.md  README.rst  setup.cfg
cart/: cart.py  context_processor.py
django_shopping_cart.egg-info/: PKG-INFO  SOURCES.txt
